hphp/hack/test/typecheck/array_map3.php.legacy.exp
File "array_map3.php", line 10, characters 13-33:
Invalid argument (Typing[4110])
File "array_map3.php", line 3, characters 26-28:
This is an int
File "array_map3.php", line 6, characters 27-30:
It is incompatible with a bool
